changed approach. Now can replace letter A and display result

--- a/crypt.html
+++ b/crypt.html
@@ -9,8 +9,13 @@
 </head>
 <body>
 
-  <textarea name="" id="" cols="30" rows="10"></textarea>
-  <script src="script.js"></script>
+  <textarea name="" id="" cols="30" rows="10">xfasgdfhsb dfgsdg dfdfg asd</textarea>
   <button type="button" onclick="buttonClick()">Translate</button>
+  
+  <section>
+    A -> 
+    <input type="text" id="a" onblur="letterChange(id,value)" value="d">
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
