main functionality complete. letter replacement working without overwriting unintended letters

--- a/crypt.html
+++ b/crypt.html
@@ -9,13 +9,11 @@
 </head>
 <body>
 
-  <textarea name="" id="" cols="30" rows="10">xfasgdfhsb dfgsdg dfdfg asd</textarea>
+  <h1>Cryptogram Helper!</h1>
+
+  <textarea name="" id="" cols="30" rows="10">dkte wfy wvsy zuasy tx wnjy! rkuwof, rynqy, ukp ykbtg yzyvg jtjykw tx nw. kt npaykyrr, kt auqnkyrr, kt lvtjtvvte efuw gts ouk pt wtpug.</textarea>
   <button type="button" onclick="buttonClick()">Translate</button>
   
-  <section>
-    A -> 
-    <input type="text" id="a" onblur="letterChange(id,value)" value="d">
-  </section>
   <script src="script.js"></script>
 </body>
 </html>
