now able to delete letters from input box and have that letter in the display field revert to the original letter

--- a/crypt.html
+++ b/crypt.html
@@ -11,7 +11,7 @@
 
   <h1>Cryptogram Helper!</h1>
 
-  <textarea name="" id="" cols="30" rows="10">dkte wfy wvsy zuasy tx wnjy! rkuwof, rynqy, ukp ykbtg yzyvg jtjykw tx nw. kt npaykyrr, kt auqnkyrr, kt lvtjtvvte efuw gts ouk pt wtpug.</textarea>
+  <textarea name="" id="" cols="30" rows="10">dkte wfy wvsy zuasy tx wnjy! rkuwof, rynqy, ukp ykbtg yzyvg jtjykw tx nw. kt npaykyrr, kt auqnkyrr, kt lvtovurwnkuwntk. kyzyv lsaa txx wnaa wtjtvvte efuw gts ouk pt wtpug.</textarea>
   <button type="button" onclick="buttonClick()">Translate</button>
   
   <script src="script.js"></script>
