added screen to appear on startup and for editing the coded message

--- a/crypt.html
+++ b/crypt.html
@@ -11,8 +11,10 @@
 
   <h1>Cryptogram Helper!</h1>
 
-  <textarea name="" id="" cols="30" rows="10">dkte wfy wvsy zuasy tx wnjy! rkuwof, rynqy, ukp ykbtg yzyvg jtjykw tx nw. kt npaykyrr, kt auqnkyrr, kt lvtovurwnkuwntk. kyzyv lsaa txx wnaa wtjtvvte efuw gts ouk pt wtpug.</textarea>
-  <button type="button" onclick="buttonClick()">Translate</button>
+  <section id="edit-screen">
+    <textarea name="" spellcheck="false" cols="30" rows="10">dkte wfy wvsy zuasy tx wnjy! rkuwof, rynqy, ukp ykbtg yzyvg jtjykw tx nw. kt npaykyrr, kt auqnkyrr, kt lvtovurwnkuwntk. kyzyv lsaa txx wnaa wtjtvvte efuw gts ouk pt wtpug.</textarea>
+    <button type="button" onclick="buttonClick()">Start Solving!</button>
+</section>
   
   <script src="script.js"></script>
 </body>
