--- a/crypt.html
+++ b/crypt.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cryptogram Solver</title>
+  <link href="https://fonts.googleapis.com/css?family=Ribeye|Inconsolata|Luckiest+Guy" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,8 +13,8 @@
   <h1>Cryptogram Helper!</h1>
 
   <section id="edit-screen">
-    <textarea name="" spellcheck="false" cols="30" rows="10">dkte wfy wvsy zuasy tx wnjy! rkuwof, rynqy, ukp ykbtg yzyvg jtjykw tx nw. kt npaykyrr, kt auqnkyrr, kt lvtovurwnkuwntk. kyzyv lsaa txx wnaa wtjtvvte efuw gts ouk pt wtpug.</textarea>
-    <button type="button" onclick="buttonClick()">Start Solving!</button>
+    <textarea name="" autofocus spellcheck="false" cols="30" rows="10">dkte wfy wvsy zuasy tx wnjy! rkuwof, rynqy, ukp ykbtg yzyvg jtjykw tx nw. kt npaykyrr, kt auqnkyrr, kt lvtovurwnkuwntk. kyzyv lsaa txx wnaa wtjtvvte efuw gts ouk pt wtpug.</textarea>
+    <button type="button" onclick="buttonClick()">Start!</button>
 </section>
   
   <script src="script.js"></script>
